# ligands.tech

./: .gitignore  BACKEND_ARCHITECTURE.md  IDEATION_TRANSCRIPT.md  MODAL_DEPLOYMENT.md  MOLECULE_RESOLUTION.md  PLAN.md  README.md  REST_API_GUIDE.md  SUPERMEMORY.md  deploy.sh  docker-compose.yml  proteinqueryexplanation.md  pyproject.toml  run.sh  validation_test_setup.md  verify_installation.py
.claude/: settings.local.json
binding_agent_spec/: AGENTS.md  FILETREE.txt  README.md
binding_agent_spec/docs/: data-contracts.md  implementation-notes.md
binding_agent_spec/examples/qmd/: collections.yaml
binding_agent_spec/examples/requests/: boltz_predict_single.yaml  gnina_dock.yaml  gnina_minimize.yaml  gnina_score.yaml  plip_profile.yaml  posebusters_check.yaml  qmd_query_skill.yaml
binding_agent_spec/prompts/: binding-agent-system-prompt.md
binding_agent_spec/schemas/: boltz2-request.schema.json  boltz2-result.schema.json  common-envelope.schema.json  gnina-dock-request.schema.json  gnina-minimize-request.schema.json  gnina-result.schema.json  gnina-score-request.schema.json  plip-request.schema.json  plip-result.schema.json  posebusters-request.schema.json  posebusters-result.schema.json  qmd-query.schema.json  qmd-result.schema.json
binding_agent_spec/skills/binding-orchestrator/: SKILL.md
binding_agent_spec/skills/boltz2/: SKILL.md
binding_agent_spec/skills/gnina/: SKILL.md
binding_agent_spec/skills/memory/: SKILL.md
binding_agent_spec/skills/plip/: SKILL.md
binding_agent_spec/skills/posebusters/: SKILL.md
binding_agent_spec/skills/qmd-search/: SKILL.md
binding_agent_spec/skills/resolve/: SKILL.md
binding_agent_spec/skills/websearch/: SKILL.md
binding_agent_spec/specs/: boltz2-wrapper.md  common-cli.md  gnina-wrapper.md  plip-wrapper.md  posebusters-wrapper.md  qmd-wrapper.md
frontend/: index.html  package.json
frontend/src/api/: client.ts
frontend/src/pages/: FinishedAgentsPage.tsx  HomePage.tsx  HypothesisPage.tsx  ResultsPage.tsx
frontend/src/types/: index.ts
frontend_SAMPLE/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend_SAMPLE/src/: App.jsx  App.tsx  index.css
frontend_SAMPLE/src/components/: ActivityFeed.jsx  AgentCard.jsx  AgentSidebarItem.jsx  CircularProgress.jsx  FileUpload.jsx  Layout.jsx  MiniMolecularViz.jsx  MolecularViz.jsx  PairCard.jsx  PairPreviewCard.jsx  ScoreBar.jsx  StepIndicator.jsx
frontend_SAMPLE/src/data/: explanations.ts  index.ts  ligands.ts  mockData.js  pairs.ts  proteins.ts  researchers.ts
frontend_SAMPLE/src/hooks/: useAgentEvents.ts
frontend_SAMPLE/src/lib/: animations.js
frontend_SAMPLE/src/pages/: AgentsPage.jsx  AgentsPage.tsx  HomePage.tsx  InteractionPage.tsx  InteractionView.jsx  ResearchersPage.tsx  ResultsPage.jsx  ResultsPage.tsx  UploadPage.jsx
frontend_SAMPLE/src/types/: index.ts
frontend_SAMPLE/src/utils/: scores.ts
ideation/: ARCHITECTURE.md  BOLTZ_API.md  MODAL_GPT_OSS_GUIDE.md  TECH_STACK.md  VISUALIZER_FORMATS.md  WEB_SEARCH_GUIDE.md  proteinqueryexplanation.md
src/bind_tools/: __init__.py
src/bind_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/bind_tools/agent/: __init__.py  cli.py  client.py  config.py  executor.py  loop.py  models.py  prompt.py  tools.py  workspace.py
src/bind_tools/api/: __init__.py  app.py  db.py  events.py  models.py
src/bind_tools/boltz/: cli.py  models.py  runner.py
src/bind_tools/common/: batch.py  cli_base.py  envelope.py  errors.py  manifest.py  runner.py
src/bind_tools/db/: __init__.py  connection.py  recorder.py  schema.py
src/bind_tools/gnina/: cli.py  models.py  runner.py
test_data/: egfr_kinase.fasta  erlotinib.sdf  imatinib.sdf
test_data/resolved/: 8vys.cif  vemurafenib_pubchem.sdf
tests/: test_ligand_resolver.py  test_ligprep.py  test_protein_resolver.py  test_protprep.py
visualizer/: index.html  package-lock.json  package.json
visualizer/src/: App.tsx  index.css
visualizer/test-data/: sample_confidence.json  sample_docking.sdf  sample_interactions.xml  sample_pae.json
workspace/ligands/: pubchem_5291_2d.sdf
(+170 files in other folders)
