[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bind-tools"
version = "0.1.0"
description = "Stable CLI wrappers for protein-ligand binding analysis tools"
requires-python = ">=3.11,<3.13"
dependencies = [
    "typer>=0.9",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
boltz = ["boltz>=1.0"]
posebusters = ["posebusters>=0.2"]
plip = ["plip>=2.3"]
gnina = ["rdkit"]
resolve = ["httpx>=0.27"]
all = [
    "boltz>=1.0",
    "posebusters>=0.2",
    "plip>=2.3",
    "rdkit",
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "jsonschema>=4.0",
]

[project.scripts]
bind-boltz = "bind_tools.boltz.cli:app"
bind-gnina = "bind_tools.gnina.cli:app"
bind-posebusters = "bind_tools.posebusters.cli:app"
bind-plip = "bind_tools.plip.cli:app"
bind-qmd = "bind_tools.qmd.cli:app"
bind-resolve = "bind_tools.resolve.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/bind_tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
